The game is actually in a playable state now. Some crashing has been fixed (thought not all). The game can be compiled with JDK 8 and the multiplayer has been tested and works.